# be/src/schemas/cart.schema.js
@@ -5,6 +5,11 @@ const addCartItemSchema = z.object({
   quantity: z.number().int().positive({ message: 'Quantity must be a positive integer' }),
 });
 
+const updateCartItemSchema = z.object({
+  quantity: z.number().int().positive({ message: 'Quantity must be a positive integer' }),
+});
+
 module.exports = {
   addCartItemSchema,
+  updateCartItemSchema,
 };
